2022-09-16T16:35:11Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3069344999
* notice: last 14d: unq all: 10 36
* notice: prev accum: outdated-unq outdated-all / unq all: 310 488 / 335 523
* notice: next accum: outdated-unq outdated-all / unq all: 310 488 / 335 524
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-09-16]

2022-09-16T08:30:32Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3066468283
* notice: last 14d: unq all: 10 35
* notice: prev accum: outdated-unq outdated-all / unq all: 310 488 / 334 523
* notice: next accum: outdated-unq outdated-all / unq all: 310 488 / 335 523
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-02 2022-09-16]

2022-09-15T16:35:15Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3062139972
* notice: last 14d: unq all: 10 35
* notice: prev accum: outdated-unq outdated-all / unq all: 309 486 / 334 521
* notice: next accum: outdated-unq outdated-all / unq all: 310 488 / 334 523
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2022-09-01] / [2022-09-15]

2022-09-15T08:34:21Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3058962759
* notice: last 14d: unq all: 10 35
* notice: prev accum: outdated-unq outdated-all / unq all: 309 486 / 332 520
* notice: next accum: outdated-unq outdated-all / unq all: 309 486 / 334 521
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -1 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2022-09-01 2022-09-15]

2022-09-15T02:43:35Z: