@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-16T16:35:11Z",
-  "count_outdated" : 488,
-  "uniques_outdated" : 310,
-  "count" : 524,
+  "timestamp" : "2022-09-17T02:28:50Z",
+  "count_outdated" : 490,
+  "uniques_outdated" : 311,
+  "count" : 526,
   "uniques" : 335,
   "clones" : [
-    {
-      "timestamp": "2022-09-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-07T00:00:00Z",
       "count": 2,
@@ -77,8 +70,8 @@
     },
     {
       "timestamp": "2022-09-16T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
