@@ -1,3 +1,11 @@
+2022-09-17T02:28:50Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3071805623
+* notice: last 14d: unq all: 10 36
+* notice: prev accum: outdated-unq outdated-all / unq all: 310 488 / 335 524
+* notice: next accum: outdated-unq outdated-all / unq all: 311 490 / 335 526
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [2022-09-02] / [2022-09-16]
+
 2022-09-16T16:35:11Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3069344999
 * notice: last 14d: unq all: 10 36
